cif/org.eclipse.escet.cif.tests/tests/event_based/lang_equiv/non_deterministic.err
ERROR: Failed to apply language equivalence check for CIF file "event_based/lang_equiv/non_deterministic.cif".
CAUSE: CIF language equivalence check tool failed due to unsatisfied preconditions:

  ----------------------------------------
  (1/1) An automaton is non-deterministic.
  ----------------------------------------
   * In location "Y.y2":
     - edge a;
            ^
     - edge a goto y1;
            ^
